Fix authorization for create ad

--- a/WebSite/Views/Home/AdsPage.cshtml
+++ b/WebSite/Views/Home/AdsPage.cshtml
@@ -80,7 +80,7 @@
                                 <label class="radio-inline"><input type="radio" name="sortDirection" id="sortDirection" value="asc">Ascending</label>
                             </div>  
                             <div class="checkbox col-sm-4">
-                                <label><input type="checkbox" id="sortCondition" value="viewcount" name="viewcount">Most Viewed</label>
+                                <label><input type="checkbox" id="sortCondition" value="viewcount" name="sortCondition">Most Viewed</label>
                             </div>
                         </div>
                     </div>
