--- a/WebSite/Views/Home/AdsPage.cshtml
+++ b/WebSite/Views/Home/AdsPage.cshtml
@@ -114,7 +114,7 @@
                                 <p>@ad.Created</p>
                             </div>
                         </div>
-                        <img src="~/images/sampleProduct1.jpg" alt="Product">
+                        <img src="data:image/png;base64,@ad.Image" alt="Product">
                         <div class="row" style="margin-top:10px">
 							<div class="col-sm-7" style="padding-left:30px">
 								<p><strong>@ad.ItemName</strong></p>
