--- a/WebSite/Views/Home/AdView.cshtml
+++ b/WebSite/Views/Home/AdView.cshtml
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <div class="thumbnail imageBox">
-                    <img src="~/images/sampleProduct3.jpg" class="image" id="iImage" alt="Product Image" style="width:100%; height:600px">
+                    <img src="data:image/png;base64,@advert.Image" class="image" id="iImage" alt="Product Image" style="width:100%; height:600px">
                     <div class="middle">
                         <div class="text">Rs. @advert.Price</div>
                     </div>
